@@ -619,10 +619,10 @@ function getCookie(name)
       return null;
   }
   else {
-    begin += 2;  
+    begin += 2;
   }
 
-  var end = document.cookie.indexOf(";", begin);
+  var end = dc.indexOf(";", begin);
   if (end == -1)
     end = dc.length;
 
