@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix bug where the last identity is used on reply (#1488101)
 - Fix locked folder rename option on servers supporting RFC2086 only (#1488089)
 - Fix encoding of LDAP contacts identifiers (#1488079)
 - Fix session race conditions when composing new messages
